# EndpointGen

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  release.toml
.github/workflows/: mirror.yml
endpoint-gen-macros/: Cargo.toml
endpoint-gen-macros/src/: lib.rs
examples/minimal_project/: Cargo.toml  README.md  services.toml
examples/minimal_project/config/: errors.ron  identifier_1.ron  identifier_2.ron  latency.ron  roles.ron  s1_endpoints.ron  test_schema.ron  types.conf  version.toml
examples/minimal_project/output/docs/: README.md  services.json
src/: definitions.rs  docs.rs  error_codes.rs  lib.rs  libs.rs  main.rs  rust.rs  service.rs  sql.rs  type_registry.rs
src/libs/: config.rs  datatable.rs  handler.rs  listener.rs  log.rs  toolbox.rs  types.rs  utils.rs
src/libs/database/: data_thread.rs  mod.rs  pooled.rs
src/libs/http/: server.rs
src/libs/ws/: basics.rs  client.rs  conn.rs  headers.rs  mod.rs  push.rs  server.rs  session.rs
src/model/: mod.rs
