# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "endpoint-gen"
version = "0.4.4"
edition = "2021"
repository = "https://github.com/pathscale/EndpointGen/"
description = "Generate Rust code for websocket API endpoints"
license = "MIT"

[package.metadata]
endpoint-libs-requirement = ">=1.1.2"

[dependencies]
# Internal dependencies
# endpoint-libs = "1.1.2"
endpoint-libs = { git = "https://github.com/pathscale/endpoint-libs.git", branch = "main" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eyre = "0.6"
convert_case = "0.6.0"
itertools = "0.12"
regex = "1.5.4"
clap = { version = "4.5", features = ["derive", "env"] }
bytes = "1.7.1"
log-panics = "2.1.0"
rust_decimal = "1.36.0"
serde_path_to_error = "0.1.16"
lazy_static = "1.5.0"
ron = "0.8"
walkdir = "2.5"
semver = "1.0"
toml = "0.8"
