# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "endpoint-gen"
version = "1.3.4" # Ideally locked to endpoint-libs version, or at least semver compatible
edition = "2024"
repository = "https://github.com/pathscale/EndpointGen/"
description = "Generate Rust code for websocket API endpoints"
license = "MIT"

[dependencies]
# Internal dependencies
endpoint-libs = "1.3.4"

# endpoint-libs = { git = "https://github.com/pathscale/endpoint-libs.git" }
# endpoint-libs = { path = "../endpoint-libs" }
endpoint-gen-macros = { path = "./endpoint-gen-macros" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eyre = "0.6"
convert_case = "0.10"
itertools = "0.14"
regex = "1.12"
clap = { version = "4.5", features = ["derive", "env"] }
log-panics = "2.1"
rust_decimal = "1.39"
ron = "0.12"
walkdir = "2.5"
semver = "1.0"
toml = "0.9"
smart-default = "0.7.1"
smart-serde-default = "0.1"

[build-dependencies]
toml = "0.9"
