[package]
name = "endpoint-gen-macros"
version = "1.3.4" # Ideally locked to endpoint-libs version, or at least semver compatible
edition = "2024"
repository = "https://github.com/pathscale/EndpointGen/"
description = "Helper macros to improve compile-time validation within EndpointGen"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
